--- a/practicas/Android/Pr1_layouts/app/src/main/res/layout/activity_main.xml
+++ b/practicas/Android/Pr1_layouts/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/boton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Botón 1"
+        android:text="@string/btn1"
         android:layout_marginRight="5dp"
         android:layout_weight="1"
         />
@@ -22,7 +22,7 @@
         android:id="@+id/boton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Botón 2"
+        android:text="@string/btn2"
         android:layout_marginRight="5dp"
         android:layout_toRightOf="@id/boton1"
         android:layout_weight="1"/>
@@ -31,7 +31,7 @@
         android:id="@+id/boton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Botón 3"
+        android:text="@string/btn3"
         android:layout_marginRight="5dp"
         android:layout_toRightOf="@id/boton2"
         android:layout_weight="1"/>
@@ -40,7 +40,7 @@
         android:id="@+id/boton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Botón 4"
+        android:text="@string/btn4"
         android:layout_toRightOf="@id/boton3"
         android:layout_weight="1"/>
 </LinearLayout>
