--- a/practicas/DIWEB/Tema2/Practica6/style.css
+++ b/practicas/DIWEB/Tema2/Practica6/style.css
@@ -40,8 +40,8 @@ main{
 
 aside{
     display: inline-block;
-    width: 19.7%;
-    float: right;
+    width: 19%;
+    vertical-align: top;
 }
 
 .social{
