--- a/practicas/DIWEB/Tema2/Practica7/css/estilos.css
+++ b/practicas/DIWEB/Tema2/Practica7/css/estilos.css
@@ -160,19 +160,19 @@ ul{
 	margin-bottom: 5px;
 }
 
-.cajaExampleDurationAnimation:nth-child(1){
+.cajaExampleDurationAnimation1{
 	background: #6ae07a;
 	animation-name: efectoMargin;
 	animation-duration:1s;
 	animation-iteration-count: infinite;
 }
-.cajaExampleDurationAnimation:nth-child(2){
+.cajaExampleDurationAnimation2{
 	background: #6ae0da;
 	animation-name: efectoMargin;
 	animation-duration:3s;
 	animation-iteration-count: infinite;
 }
-.cajaExampleDurationAnimation:nth-child(3){
+.cajaExampleDurationAnimation3{
 	background: #6a9de0;
 	animation-name: efectoMargin;
 	animation-duration:4s;
@@ -191,39 +191,39 @@ ul{
 	}
 }
 
-.cajaExampleDirectionAnimation{
+.proporcionesCaja {
 	width: 20px;
 	height: 20px;
 	margin-bottom: 5px;
 }
 
-.cajaExampleDirectionAnimation:nth-child(1){
+.cajaExampleDirectionAnimation1{
 	background: #853be6;
-  animation-duration: 2s;
+  animation-duration: 5s;
   animation-name: slidein;
   animation-iteration-count: infinite;
   animation-direction: normal;
 }
 
-.cajaExampleDirectionAnimation:nth-child(2){
+.cajaExampleDirectionAnimation2{
 	background: #3be63b;
-  animation-duration: 2s;
+  animation-duration: 5s;
   animation-name: slidein;
   animation-iteration-count: infinite;
   animation-direction: reverse;
 }
 
-.cajaExampleDirectionAnimation:nth-child(3){
+.cajaExampleDirectionAnimation3{
 	background: #e63b3b;
-  animation-duration: 4s;
+  animation-duration: 6s;
   animation-name: slidein;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
 
-.cajaExampleDirectionAnimation:nth-child(4){
+.cajaExampleDirectionAnimation4{
 	background: #1bd698;
-  animation-duration: 4s;
+  animation-duration: 6s;
   animation-name: slidein;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse;
@@ -241,43 +241,39 @@ ul{
   }
 }
 
-.cajaExampleFillAnimation{
-	width: 20px;
-	height: 20px;
-	margin-bottom: 5px;
-}
-
-.cajaExampleFillAnimation:nth-child(1){
+.cajaExampleFillAnimation1{
 	background: #422727;
-	animation-duration: 4s;
-	animation-delay: 2s; 
+	animation-duration: 5s;
+	animation-delay: 5s; 
   animation-name: slideout;
 	animation-fill-mode: none;
 }
 
-.cajaExampleFillAnimation:nth-child(2){
+.cajaExampleFillAnimation2{
 	background: #84ade9;
-  animation-duration: 4s;
+	animation-duration: 5s;
+	animation-delay: 5s; 
   animation-name: slideout;
 	animation-fill-mode: forwards;
 }
 
-.cajaExampleFillAnimation:nth-child(3){
+.cajaExampleFillAnimation3{
 	background: #b98255;
-	animation-duration: 4s;
-	animation-delay: 2s; 
+	animation-duration: 5s;
+	animation-delay: 5s; 
 	animation-name: slideout;
 	animation-fill-mode: backwards;
 }
 
-.cajaExamplePlayAnimation{
-	width: 20px;
-	height: 20px;
-	margin-bottom: 5px;
+.cajaExampleFillAnimation4{
+	background: #b2df48;
+	animation-duration: 5s;
+	animation-delay: 5s; 
+	animation-name: slideout;
+	animation-fill-mode: both;
 }
 
-
-.cajaExamplePlayAnimation:nth-child(1){
+.cajaExamplePlayAnimation1{
 	background: #006cc5;
 	animation-duration: 4s;
 	animation-iteration-count: infinite;
@@ -285,7 +281,7 @@ ul{
 	animation-play-state: running;
 }
 
-.cajaExamplePlayAnimation:nth-child(2){
+.cajaExamplePlayAnimation2{
 	background: #ffb570;
 	animation-duration: 4s;
 	animation-iteration-count: infinite;
@@ -305,7 +301,7 @@ ul{
   }
 }
 
-.cajaExampleTimingFunction{
+.cajaExampleTimingFunctionEase{
 	text-align: center;
 	width: 50px;
     height: 50px;
@@ -314,24 +310,60 @@ ul{
     animation: mymove 5s infinite;
     animation-timing-function: ease;
 }
-.cajaExampleTimingFunction2{
+.cajaExampleTimingFunctionEaseIn{
 	text-align: center;
 	width: 50px;
     height: 50px;
-    background: green;
+    background: yellow;
+    position: relative;
+    animation: mymove 5s infinite;
+    animation-timing-function: ease-in;
+}
+.cajaExampleTimingFunctionEaseOut{
+	text-align: center;
+	width: 50px;
+    height: 50px;
+    background: violet;
+    position: relative;
+    animation: mymove 5s infinite;
+    animation-timing-function: ease-out;
+}
+.cajaExampleTimingFunctionEaseInOut{
+	text-align: center;
+	width: 50px;
+	height: 50px;
+	background: blue;
+	color: white;
+	position: relative;
+	animation: mymove 5s infinite;
+	animation-timing-function: ease-in-out;
+}
+.cajaExampleTimingFunctionLinear{
+	text-align: center;
+	width: 50px;
+    height: 50px;
+    background: rgb(0, 255, 0);
     position: relative;
     animation: mymove 5s infinite;
     animation-timing-function: linear;
 }
-.cajaExampleTimingFunction3{
+.cajaExampleTimingFunctionStepStart{
 	text-align: center;
 	width: 50px;
     height: 50px;
-	background: blue;
-	color: white;
+    background: rgb(255, 115, 0);
     position: relative;
     animation: mymove 5s infinite;
-    animation-timing-function: ease-in-out;
+    animation-timing-function: step-start;
+}
+.cajaExampleTimingFunctionStepEnd{
+	text-align: center;
+	width: 50px;
+    height: 50px;
+    background: rgb(0, 255, 255);
+    position: relative;
+    animation: mymove 5s infinite;
+    animation-timing-function: step-end;
 }
 
 .cajaExamplDelay{
