--- a/practicas/DWEC/Tema 4. Programación con arrays, funciones y objetos/Mastermind/css/style.css
+++ b/practicas/DWEC/Tema 4. Programación con arrays, funciones y objetos/Mastermind/css/style.css
@@ -34,6 +34,7 @@ main {
     height: 50px;
     width: 50px;
     box-shadow: 0 0 20px black;
+    cursor: pointer;
 }
 
 #circuloRojo {
@@ -96,6 +97,7 @@ main {
     box-shadow: 0 0 20px black;
     display: inline-block;
     margin: 20px;
+    cursor: pointer;
 }
 
 .circuloComprobar {
