--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,12 @@
-$resolucionPc: "min-width: 630px"
+$resolucionPc: "min-width: 1140px"
+$resolucionTablet: "min-width: 630px"
+$primaryColor: #333B50
+$secondaryColor: #00D646
+
+main
+    display: flex
+    flex-flow: column
+    align-items: center
 
 #header
     height: 100vh
@@ -6,22 +14,193 @@ $resolucionPc: "min-width: 630px"
     flex-flow: column
     align-items: center
     justify-content: center
-    text-align: justify
     width: 100%
     h2
         font: normal normal normal 100px/1.4em 'eb garamond',serif
         color: #302D2D
         margin: 0
-        @media screen and ($resolucionPc)
+        @media screen and ($resolucionTablet)
             font: normal normal normal 210px/1.4em 'eb garamond',serif
     
     h3
         font: normal normal normal 30px/1.4em 'eb garamond',serif
         color: #302D2D
         margin: 0 15px
-        @media screen and ($resolucionPc)
+        @media screen and ($resolucionTablet)
             font: normal normal normal 50px/1.4em 'eb garamond',serif
             margin: 0 15px
 
+#header::after
+    content: ""
+    background-image: url("../imagenes/header.jpg")
+    background-repeat: no-repeat
+    background-size: cover
+    opacity: 0.8
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
+    position: fixed
+    z-index: -1
+
 .signo
-    color: #00D646
+    color: $secondaryColor
+.punto
+    font-size: 50px
+
+#sobreMi
+    background-color: $primaryColor
+    width: 80%
+    height: auto
+    margin-top: -100px
+    display: flex
+    flex-flow: column
+    align-items: center
+    position: relative
+    box-shadow: 10px 10px 122px 3px rgba(0,0,0,0.46)
+
+    @media screen and ($resolucionTablet)
+        width: 50%
+    @media screen and ($resolucionPc)
+        width: 30%
+
+    img
+        margin-top: 20px
+        margin-bottom: 18px
+        border-radius: 50%
+        width: 90px
+        height: 90px
+
+    p
+        margin: 20px
+        text-align: justify
+        color: white
+        @media screen and ($resolucionTablet)
+            font-size: 20px
+
+#skills
+    height: 100vh
+    width: 100%
+    margin-top: -150px
+    background-image: url("../imagenes/imagen2.jpg")
+    background-repeat: no-repeat
+    background-size: cover
+
+    #muestraHabilidades
+        margin-top: 200px
+        text-align: center
+
+        h2
+            font: normal normal normal 42px/1.4em sans-serif
+            font-weight: bold
+            color: $primaryColor
+            @media screen and ($resolucionTablet)
+                font: normal normal normal 80px/1.4em sans-serif
+    
+.habilidad
+    display: grid
+    grid-template-columns: 30% 70%
+    align-items: center
+    p
+        text-align: right
+        margin-right: 15px
+        color: $primaryColor
+    
+    div
+        background-color: $secondaryColor
+        width: 0%
+        height: 18px
+
+#proyectos
+    min-height: 100vh
+    width: 100%
+    text-align: center
+    h2
+        font: normal normal normal 42px/1.4em sans-serif
+        font-weight: bold
+        color: $primaryColor
+        @media screen and ($resolucionTablet)
+                font: normal normal normal 80px/1.4em sans-serif
+    .proyecto
+        margin-bottom: 10px
+
+        h3
+            @media screen and ($resolucionTablet)
+                font-size: 35px
+
+        img
+            width: 80%
+            height: 200px
+            box-shadow: 10px 10px 122px 3px rgba(0,0,0,0.46)
+            &:hover
+                opacity: 0.8
+            @media screen and ($resolucionPc)
+                height: 300px
+    #contenidoProyectos
+        @media screen and ($resolucionTablet)
+            display: grid
+            grid-template-columns: repeat(2, 1fr)
+        @media screen and ($resolucionPc)
+            display: grid
+            grid-template-columns: repeat(3, 1fr)
+
+aside
+    display: none
+    @media screen and ($resolucionTablet)
+        display: block
+        position: fixed
+        top: 50vh
+        right: 0
+        .btnAside
+            border-radius: 50%
+            width: 20px
+            height: 20px
+            margin: 20px
+            background-color: $secondaryColor
+
+
+footer 
+    display: flex
+    flex-flow: column
+    background: #262626
+    text-align: center
+    height: 200px
+    width: 100%
+    p 
+        color: #fff
+        margin: 25px 5px 0px
+        padding-top: 20px
+    
+    #correo
+        text-decoration: none
+        margin-top: 15px 
+        color: white
+        &:hover
+            text-decoration: underline
+
+    #iconos 
+        margin: auto
+        text-align: center
+
+    #iconos 
+        a 
+            color: #fff
+            margin: 0px 5px
+            opacity: 0.2
+            text-decoration: none
+
+        #twitter:hover 
+            color: #04a6db
+            opacity: 1
+
+        #facebook:hover 
+            color: #02309b
+            opacity: 1
+
+        #github:hover 
+            color: #9f00ff
+            opacity: 1
+
+        #linkedin:hover 
+            color: red
+            opacity: 1
