--- a/practicas/DIWEB/Tema6/portfolio/css/style.sass
+++ b/practicas/DIWEB/Tema6/portfolio/css/style.sass
@@ -9,7 +9,7 @@ main
     align-items: center
 
 #header
-    height: 100vh
+    min-height: 100vh
     display: flex
     text-align: center
     flex-flow: column
@@ -17,14 +17,14 @@ main
     justify-content: center
     align-content: center
     width: 100%
-    h2
+    #hola
         font: normal normal normal 100px/1.4em 'eb garamond',serif
         color: #302D2D
         margin: 0
         @media screen and ($resolucionTablet)
             font: normal normal normal 210px/1.4em 'eb garamond',serif
     
-    h3
+    h1
         font: normal normal normal 30px/1.4em 'eb garamond',serif
         color: #302D2D
         margin: 0 15px
@@ -50,25 +50,15 @@ main
     z-index: -1
 
 #escribir
+    min-height: 45px
     border-right: .06em solid #fff
-    width: 200px
-    display: block
-    white-space: nowrap
-    overflow: hidden
-    animation: escribir 2s steps(28, end), barra .4s step-end infinite alternate
+    animation: barra .4s step-end infinite alternate
     @media screen and ($resolucionTablet)
-        width: 320px
-    
-
-@keyframes escribir  
-    0%  
-        width: 0
+        min-height: 70px
 
 @keyframes barra 
     50% 
         border-color: transparent
-
-
 
 .signo
     color: $secondaryColor
@@ -106,7 +96,7 @@ main
             font-size: 20px
 
 #skills
-    height: 100vh
+    min-height: 100vh
     width: 100%
     margin-top: -150px
     background-image: url("../imagenes/imagen2.jpg")
@@ -132,13 +122,16 @@ main
         text-align: right
         margin-right: 15px
         color: $primaryColor
+        img
+            height: 35px
+            width: 35px
     
     div
         height: 10px
         color: #fff
         font-weight: bold
         text-align: right
-        background: $secondaryColor
+        background: rgba(51, 59, 80, 0.856)
         width: 0%
         padding: 0.8em
         border-radius: 4px
@@ -153,31 +146,89 @@ main
         color: $primaryColor
         @media screen and ($resolucionTablet)
                 font: normal normal normal 80px/1.4em sans-serif
-    .proyecto
-        margin-bottom: 10px
 
-        h3
+#slider 
+    position: relative
+    overflow: hidden
+    margin: 200px auto 0 auto
+    border-radius: 4px
+    ul 
+        position: relative
+        margin: 0
+        padding: 0
+        height: 200px
+        list-style: none
+        li 
+            position: relative
+            display: flex
+            align-items: center
+            justify-content: center
+            float: left
+            margin: 0
+            padding: 0
+            width: 300px
+            height: 168px
+            background: #ccc
+            text-align: center
+            line-height: 300px
+            background-repeat: no-repeat
+            background-size: cover
             @media screen and ($resolucionTablet)
-                font-size: 35px
-
-        img
-            width: 80%
-            height: 200px
-            box-shadow: 10px 10px 122px 3px rgba(0,0,0,0.46)
-            transition: transform 1s
-            &:hover
-                transform: scale(1.1)
-                transition: transform 1s
-                opacity: 0.8
-            @media screen and ($resolucionPc)
+                width: 500px
                 height: 300px
-    #contenidoProyectos
-        @media screen and ($resolucionTablet)
-            display: grid
-            grid-template-columns: repeat(2, 1fr)
-        @media screen and ($resolucionPc)
-            display: grid
-            grid-template-columns: repeat(3, 1fr)
+            @media screen and ($resolucionPc)
+                width: 700px
+                height: 400px
+                
+            a
+                text-decoration: none
+                color: white
+                font-weight: bold
+                font-size: 30px
+                @media screen and ($resolucionTablet)
+                    font-size: 50px
+                &:hover
+                    text-decoration: underline
+        #proyectoCasas
+            background-image: url("../imagenes/black.png"), url("../imagenes/proyectoCasasRurales.png")
+        #gestorTareas
+            background-image: url("../imagenes/black.png"), url("../imagenes/gestorDeTareas.png")
+        #mastermind
+            background-image: url("../imagenes/black.png"), url("../imagenes/mastermind.png")
+        #servidor
+            background-image: url("../imagenes/black.png"), url("../imagenes/servidor.png")
+        #proyectoJava
+            background-image: url("../imagenes/black.png"), url("../imagenes/proyectoJava.png")
+            
+a.control_prev, a.control_next 
+    position: absolute
+    top: 40%
+    z-index: 999
+    display: block
+    padding: 4% 3%
+    width: auto
+    height: auto
+    background: #2a2a2a
+    color: #fff
+    text-decoration: none
+    font-weight: 600
+    font-size: 18px
+    opacity: 0.8
+    cursor: pointer
+
+
+a.control_prev:hover, a.control_next:hover 
+    opacity: 1
+    -webkit-transition: all 0.2s ease
+
+
+a.control_prev 
+    border-radius: 0 2px 2px 0
+
+
+a.control_next 
+    right: 0
+    border-radius: 2px 0 0 2px
 
 aside
     display: none
@@ -253,56 +304,4 @@ footer
 
 
 
-#slider 
-    position: relative
-    overflow: hidden
-    margin: 20px auto 0 auto
-    border-radius: 4px
-    ul 
-        position: relative
-        margin: 0
-        padding: 0
-        height: 200px
-        list-style: none
-        li 
-            position: relative
-            display: block
-            float: left
-            margin: 0
-            padding: 0
-            width: 500px
-            height: 300px
-            background: #ccc
-            text-align: center
-            line-height: 300px
 
-
-a.control_prev, a.control_next 
-    position: absolute
-    top: 40%
-    z-index: 999
-    display: block
-    padding: 4% 3%
-    width: auto
-    height: auto
-    background: #2a2a2a
-    color: #fff
-    text-decoration: none
-    font-weight: 600
-    font-size: 18px
-    opacity: 0.8
-    cursor: pointer
-
-
-a.control_prev:hover, a.control_next:hover 
-    opacity: 1
-    -webkit-transition: all 0.2s ease
-
-
-a.control_prev 
-    border-radius: 0 2px 2px 0
-
-
-a.control_next 
-    right: 0
-    border-radius: 2px 0 0 2px
